[package]
name = "lepr"
version = "0.1.0"
authors = ["greg <hubert.greg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.2"
pest_derive = "2.1.0"
rustyline = "5.0.6"
ansi_term = "0.12.1"
hex = "0.4.0"
